--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<app-navbar></app-navbar>
+<ul>
+    @for(user of users; track user.id){
+        
+            <li><a [routerLink]="['/user', user.id]">User</a>
+            {{user.id}} -
+            {{user.email}} -
+            {{user.first_name}} -
+            {{user.last_name}} -
+            {{user.avatar}}</li>
+        
+    }
+    </ul>
+
+<app-footer></app-footer>
