--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -1,9 +1,9 @@
 <form action="...">
   <label for="username">Username:</label><br>
-  <input type="text" id="username" name="username"><br>
-  <label for="email">Email:</label><br>
-  <input type="email" id="email" name="email"><br>
+  <input [(ngModel)]="login.username" type="text" id="username" name="username"><br>
   <label for="password">Password:</label><br>
-  <input type="password" id="password" name="password"><br>
-  <input type="submit" value="Submit">
+  <input [(ngModel)]="login.password" type="password" id="password" name="password"><br>
+  <button (click)="verifyLogin()">Sign in</button>
+
+  {{login.username}} - {{login.password}}
 </form>
