--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+<nav>
+    <ul>
+        <li><a [routerLink]="['/home']">Home</a> &nbsp; <a [routerLink]="['/machinery']">Machinery</a></li>
+
+    </ul>
+</nav>
